# GStreamer-Camera

./: CMakeLists.txt  README.md
inc/: Containers.h  GStreamerBus.h  MessageHandler.h  Pipeline.h  Sink.h
samples/: CMakeLists.txt  cam0.cpp  cam1.cpp  cam2.cpp
samples/Camera/: .gitignore  CMakeLists.txt
src/: Containers.cpp  GStreamerBus.cpp  GStreamerMessages.cpp  MessageHandler.cpp  Pipeline.cpp  Sink.cpp
